Fixed events page hidden elements creating whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@ h3.title {
   transition: opacity 1s linear;
   opacity: 0;
   visibility: hidden;
-  position: absolute;
+  position: fixed;
   -webkit-transition: opacity 600ms, visibility 600ms;
   transition: opacity 600ms, visibility 600ms;
 }
